feat(checklist): form back-end session 2/2
